refactor (Stream) : Stream에서 지원하는 toList()를 이용함